--- a/ghi/src/CreateReviewForm.css
+++ b/ghi/src/CreateReviewForm.css
@@ -16,3 +16,11 @@
     align-items: center;
     padding: 5px;
 }
+
+.form-label {
+    color: #696969;
+}
+
+.modal-title {
+    color: #080808;
+}
