--- a/ghi/src/style.css
+++ b/ghi/src/style.css
@@ -1,10 +1,7 @@
-/* body {
-    background-color: #eef3f4;
-} */
- 
 div {
-color: black;
+    color: black;
 }
+
 .height-100 {
     height: 100vh;
 }
@@ -45,22 +42,23 @@ color: black;
     margin-bottom: 2px;
 }
 
-.scroll {
-    width: 100%;
-    height: 500px;
+.scroller {
+    width: 100px;
+    height: 50px;
     overflow-y: scroll;
     scrollbar-color: rebeccapurple green;
     scrollbar-width: thin;
-  }
+
+}
 
 .text {
-    color:#000000cd;
+    color: #000000cd;
     font-weight: 400;
 }
 
-h6{
+h6 {
     font-weight: 600;
-    
+
 }
 
 .user {
@@ -69,11 +67,8 @@ h6{
 }
 
 .style {
-    
-    color:#20240bd7;
+    color: #20240bd7;
     font-style: italic;
     font-weight: 400;
-   
-    
-    
-  }
+
+}
