--- a/ghi/src/style.css
+++ b/ghi/src/style.css
@@ -1,5 +1,15 @@
+
+
+
 div {
     color: black;
+}
+
+.movie-card {
+    row-gap: 10px;
+    margin-top:  100px;
+    
+    /* row mt-5 mb-5 */
 }
 
 .height-100 {
