--- a/ghi/src/style.css
+++ b/ghi/src/style.css
@@ -1,25 +1,11 @@
-
-
-
-div {
+/* div {
     color: black;
-}
+} */
 
-.movie-card {
-    row-gap: 10px;
-    margin-top:  100px;
-    
-    /* row mt-5 mb-5 */
-}
+
 
 .height-100 {
     height: 100vh;
-}
-
-.card {
-    width: 380px;
-    border: none;
-    height: 100px;
 }
 
 .ratings {
@@ -55,9 +41,25 @@ div {
 .scroll {
 
     overflow-y: auto;
+
     /* scrollbar-color: rebeccapurple green; */
     scrollbar-width: thin;
+    
 
+}
+
+body::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: blue;
+    /* color of the scroll thumb */
+    border-radius: 20px;
+    /* roundness of the scroll thumb */
+    border: 3px solid orange;
+    /* creates padding around scroll thumb */
 }
 
 
@@ -66,9 +68,10 @@ div {
     padding-bottom: 20px;
     color: black;
     font-size: 21px;
-    padding-left: 13px;
-    padding-right: 13px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
+
 .h {
     font-size: 620;
     /* font-style: oblique; */
@@ -77,18 +80,19 @@ div {
 }
 
 .review-box {
-    border-radius:5px;
+    border-radius: 3px;
     width: 100%;
     height: 400px;
     margin-top: 50px;
     /* margin-left: 10px; */
     margin-right: 10px;
     margin-bottom: 50px;
-    
+
     border-width: 10px;
     border-color: white;
     background-color: white;
 }
+
 .review-box2 {
     width: 100%;
     height: auto;
@@ -113,9 +117,9 @@ div {
 }
 
 .empty-reviews {
-    background-color: white; 
+    background-color: white;
     color: black;
     margin-top: 10px;
     font-size: 21px;
-    
+
 }
