changes to create review form

--- a/ghi/src/CreateReviewForm.css
+++ b/ghi/src/CreateReviewForm.css
@@ -5,7 +5,7 @@
 
 .success-message {
     font-family: "Roboto", sans-serif;
-    background-color: #060707;
+    background-color: #379e9e;
     padding: 15px;
     color: white;
 }
