temp changes before pull

--- a/ghi/src/style.css
+++ b/ghi/src/style.css
@@ -33,12 +33,12 @@
 }
 
 .scroll  {
-    overflow-y: overlay;
-    /* overflow-y: auto; */
+    overflow-y: show;
+} 
 
-    /* scrollbar-width: thin; */
-}
-::-webkit-scrollbar {display:none;}
+.scroll2  {
+    overflow-y: hidden;
+} 
 
 .text {
     padding-top: 20px;
